# auto-merge-dependabot-prs

./: .gitignore  Cargo.toml  LICENSE  README.md  add_comment.graphql  main-old.rs  samconfig.toml  template.yaml
.github/workflows/: ci.yml
auto-merge-dependabot-pull-requests-webhook/: README.md
auto-merge-dependabot-pull-requests-webhook/src/: http_handler.rs
docs/: DESCRIPTION.md  description.md
go-webhook/src/: main.go
graphql-gen/: Cargo.toml
graphql-gen/src/: add_comment.graphql  main.rs
logs/: closed.json  permissions-accepted.json
rust-webhook/: Cargo.toml
rust-webhook/src/: email.rs  main.rs  signature.rs
rust-webhook/src/graphql/: enable_pull_request_auto_merge.graphql
src/: configuration.rs  main.rs  signature.rs
tests/webhook-data/pull-request-opened-by-dependabot/: headers.txt  payload.json
