[package]
name = "auto-merge-dependabot-pull-requests-webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13.0"
octocrab = "0.43.0"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros"] }

[dependencies.lambda_http]
version = "0.13.0"
features = ["pass_through"]
# default-features = false
