[package]
name = "auto-merge-dependabot-pull-requests-webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
graphql_client = "0.14.0" # curl -L https://docs.github.com/public/fpt/schema.docs.graphql -o github_schema.graphql
jsonwebtoken = "9.3.1"
lambda_runtime = "0.13.0"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros"] }
serde = "1.0.219"
aws-config = "1.6.3"
aws-sdk-ses = "1.75.0"

[dependencies.octocrab]
version = "0.43.0"

[dependencies.reqwest]
version = "0.12.15"
features = ["json"]

[dependencies.lambda_http]
version = "0.13.0"

[dependencies.openssl]
version = "0.10.71"
features = ["vendored"] # See https://github.com/sfackler/rust-openssl/issues/2217
