[package]
edition = "2024"
name = "auto-merge-dependabot-pull-requests-webhook"
version = "0.1.0"
homepage = "https://github.com/auto-merge-prs/auto-merge-dependabot-prs"
documentation = "https://github.com/auto-merge-prs/auto-merge-dependabot-prs"
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/auto-merge-prs/auto-merge-dependabot-prs"

[dependencies]
hex = "0.4.3"
graphql_client = "0.14.0" # curl -L https://docs.github.com/public/fpt/schema.docs.graphql -o github_schema.graphql
jsonwebtoken = "9.3.1"
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros"] }
serde = "1.0.225"

[dependencies.octocrab]
version = "0.45.0"

[dependencies.reqwest]
version = "0.12.15"
features = ["json"]

[dependencies.lambda_http]
version = "0.17.0"

[dependencies.openssl]
version = "0.10.73"
features = ["vendored"] # See https://github.com/sfackler/rust-openssl/issues/2217
